--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>clase 09</title>
 </head>
 <body>
     <h1>clase</h1>
     <p>soy un parrafogi</p>
     <h2>esto es un subtitulo</h2>
+    <p>soy un parrafo del h2</p>
+    <h3>soy un h3</h3>
 
 </body>
 </html>
