agregue un parrafo h3

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2>esto es un subtitulo</h2>
     <p>soy un parrafo del h2</p>
     <h3>soy un h3</h3>
+    <p>soy un parrafo h3</p>
 
 </body>
 </html>
